# outskill-mini-projects

./: .gitignore  README.md
projects/: pyproject.toml
projects/advanced/01_hiring_pipeline/: agents.py  api_server.py  main.py  tasks.py  tools.py
projects/advanced/02_news_factchecker/: agents.py  main.py  tasks.py  tools.py
projects/advanced/03_price_intel/: agents.py  main.py  tasks.py  tools.py
projects/advanced/04_crypto_advisor/: agents.py  main.py  tasks.py  tools.py
projects/advanced/05_repo_health/: agents.py  main.py  tasks.py  tools.py
projects/advanced/06_travel_planner/: agents.py  main.py  tasks.py  tools.py
projects/advanced/07_sales_intel/: agents.py  api_server.py  main.py  tasks.py  tools.py
projects/advanced/08_license_auditor/: agents.py  main.py  tasks.py  tools.py
projects/advanced/09_content_repurposer/: agents.py  main.py  tasks.py  tools.py
projects/advanced/10_energy_optimizer/: agents.py  main.py  tasks.py  tools.py
projects/beginner/00_hate_speech_detector/: tasks.py
projects/beginner/01_resume_screener/: agents.py  main.py  tasks.py
projects/beginner/02_review_sentiment/: agents.py  main.py  tasks.py
projects/beginner/03_email_tone_rewriter/: agents.py  main.py  tasks.py
projects/beginner/04_meeting_notes/: agents.py  main.py  tasks.py
projects/beginner/05_cold_outreach/: agents.py  main.py  tasks.py
projects/beginner/06_code_explainer/: agents.py  main.py  tasks.py
projects/beginner/07_social_caption/: agents.py  main.py  tasks.py
projects/beginner/08_legal_simplifier/: agents.py  main.py  tasks.py
(+70 files in other folders)
