[project]
name = "outskill-mini-projects"
version = "0.1.0"
description = "30 mini projects across beginner/intermediate/advanced CrewAI tiers"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai>=1.14.2",
    "crewai-tools>=1.14.2",
    "fastapi>=0.136.0",
    "feedparser>=6.0.12",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]
