[project]
name = "outskill-mini-projects"
version = "0.1.0"
description = "30 mini projects across beginner/intermediate/advanced CrewAI tiers"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "crewai>=1.14.2",
    "crewai-tools>=1.14.2",
    "fastapi>=0.136.0",
    "feedparser>=6.0.12",
    "openmeteo-requests>=1.7.5",
    "pycoingecko>=3.2.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.33.1",
    "requests-cache>=1.3.1",
    "retry-requests>=2.0.0",
    "uvicorn>=0.44.0",
    "youtube-transcript-api>=1.2.4",
]
